--- a/Origami/Resources/layout/activity_game.xml
+++ b/Origami/Resources/layout/activity_game.xml
@@ -4,22 +4,25 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="fill_horizontal">
+    android:gravity="fill_horizontal"
+    android:background="@color/backgroundColor"
+    >
 
     <LinearLayout
-        android:layout_width="60dp"
+        android:paddingTop="10dp"
+        android:layout_width="70dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="right">
 
         <ImageButton
             android:src="@drawable/back"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:padding="10dp"
+            android:padding="5dp"
             android:scaleType="centerCrop"
             android:id="@+id/back_button" 
-            android:background="@android:color/white"
+            android:background="@color/buttonBackgroundColor"
         />
     </LinearLayout>
 
@@ -43,39 +46,49 @@
     <LinearLayout
         android:layout_width="70dp"
         android:layout_height="match_parent"
-        android:layout_gravity="right"
         android:orientation="vertical"
-        android:gravity="center"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:gravity="fill_vertical"
         android:id="@+id/linearLayout2">
 
         <ImageButton
             android:id="@+id/help_button" 
             android:src="@drawable/help"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:padding="15dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:padding="5dp"
             android:scaleType="centerCrop"
-            android:background="@android:color/white"
+            android:background="@color/buttonBackgroundColor"
         />
 
-        <ImageButton
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical">
+            
+            <ImageButton
             android:id="@+id/undo_button" 
             android:src="@drawable/undo"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:padding="15dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+                android:padding="5dp"
             android:scaleType="centerCrop"
-            android:background="@android:color/white"
-        />
+            android:background="@color/buttonBackgroundColor"
+            />
+        </LinearLayout>
+
+        
 
         <ImageButton
             android:id="@+id/reset_button" 
             android:src="@drawable/reset"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:padding="15dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:padding="5dp"
             android:scaleType="centerCrop"
-            android:background="@android:color/white"
+            android:background="@color/buttonBackgroundColor"
         />
 
     </LinearLayout>
