--- a/Origami/Resources/layout/activity_levelselect.xml
+++ b/Origami/Resources/layout/activity_levelselect.xml
@@ -4,24 +4,28 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:background="@color/buttonBackgroundColor">
 
-    <Button
-        android:text="BACK"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
         android:id="@+id/back_button" 
+        android:src="@drawable/back"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:scaleType="centerCrop"
+        android:tint="@color/buttonColor"
+        android:background="@color/buttonBackgroundColor" 
     />
 
     <GridView
         android:id="@+id/level_grid"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:numColumns="auto_fit"
+        android:numColumns="4"
         android:verticalSpacing="30dp"
         android:horizontalSpacing="30dp"
+        android:paddingHorizontal="30dp"
         android:stretchMode="columnWidth"
-        android:gravity="center"
     />
 </LinearLayout>
