--- a/Origami/Resources/layout/activity_mainmenu.xml
+++ b/Origami/Resources/layout/activity_mainmenu.xml
@@ -5,12 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minWidth="25px"
-    android:minHeight="25px">
-    <Button
-        android:text="START"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/start_button" 
+    android:minHeight="25px"
+    android:gravity="center"
+    android:background="@color/buttonBackgroundColor">
+
+    <ImageButton
+        android:id="@+id/start_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/play"
+        android:tint="@color/buttonColor"
+        android:background="@color/buttonBackgroundColor"
     />
 
+    <Button
+        android:id="@+id/dbg_reset_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RESET PROGRESS"/>
 </LinearLayout>
