--- a/Origami/Resources/layout/level_icon.xml
+++ b/Origami/Resources/layout/level_icon.xml
@@ -4,19 +4,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/buttonBackgroundColor"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    
     android:gravity="center"
     >
 
     <AbsoluteLayout 
-        android:layout_width="90dp"
-        android:layout_height="90dp">
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:translationZ="2dp"
+        android:background="@color/buttonBackgroundColor">
 
     <TextView
         android:id="@+id/level_number"
-        android:text="LEVEL 0"
+        android:text="УРОВЕНЬ 20"
         android:gravity="center_horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -28,10 +30,10 @@
     <ImageView
         android:id="@+id/star0"
         android:src="@drawable/star"
-        android:layout_width="21dp"
-        android:layout_height="21dp"
-        android:layout_x="9.5dp"
-        android:layout_y="40dp"
+        android:layout_width="41dp"
+        android:layout_height="41dp"
+        android:layout_x="4.5dp"
+        android:layout_y="60dp"
         android:scaleType="centerCrop"
         android:tint="@color/buttonColor"         
     /> 
@@ -39,10 +41,10 @@
     <ImageView
         android:id="@+id/star1"
         android:src="@drawable/star"
-        android:layout_width="21dp"
-        android:layout_height="21dp"
-        android:layout_x= "34.5dp"
-        android:layout_y="34dp"
+        android:layout_width="41dp"
+        android:layout_height="41dp"
+        android:layout_x= "44.5dp"
+        android:layout_y="74dp"
         android:scaleType="centerCrop"
         android:tint="@color/buttonColor"         
     />   
@@ -50,10 +52,10 @@
     <ImageView
         android:id="@+id/star2"
         android:src="@drawable/star"
-        android:layout_width="21dp"
-        android:layout_height="21dp"
-        android:layout_x="59.5dp"
-        android:layout_y="40dp"
+        android:layout_width="41dp"
+        android:layout_height="41dp"
+        android:layout_x="84.5dp"
+        android:layout_y="60dp"
         android:scaleType="centerCrop"
         android:tint="@color/buttonColor"         
     />   
@@ -61,10 +63,10 @@
     <ImageView
         android:id="@+id/lock"
         android:src="@drawable/lock"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_x="30dp"
-        android:layout_y= "50dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_x="40dp"
+        android:layout_y= "30dp"
         android:scaleType="centerCrop"
         android:tint="@color/buttonColor"         
     />  
