--- a/Origami/Resources/layout/level_lose_modal.xml
+++ b/Origami/Resources/layout/level_lose_modal.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="LEVEL FAILED"
+            android:text="УРОВЕНЬ ПРОВАЛЕН"
             android:paddingVertical="15dp"
             android:textSize="20dp"
             android:textColor="@color/buttonColor"/>
@@ -30,27 +30,60 @@
             android:layout_height="match_parent"
             android:paddingTop="40dp">
 
-            <ImageButton
-                android:id="@+id/back_button"
+            <LinearLayout
                 android:layout_width="110dp"
-                android:layout_height="70dp"
-                android:paddingHorizontal="40dp"
-                android:paddingVertical="10dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/back"
-                android:tint="@color/buttonColor"
-                android:background="@color/buttonBackgroundColor"/>
+                android:layout_height="90dp"
+                android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/reset_button"
+                <ImageButton
+                    android:id="@+id/back_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:paddingHorizontal="40dp"
+                    android:paddingVertical="10dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/back"
+                    android:tint="@color/buttonColor"
+                    android:background="@color/buttonBackgroundColor"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="назад"
+                    android:textSize="13dp"
+                    android:gravity="center"
+                    android:textColor="@color/textColor"
+                />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="110dp"
-                android:layout_height="70dp"
-                android:paddingVertical="10dp"
-                android:paddingHorizontal="40dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/reset"
-                android:tint="@color/buttonColor"
-                android:background="@color/buttonBackgroundColor"/>
+                android:layout_height="90dp"
+                android:orientation="vertical">
+
+                <ImageButton
+                    android:id="@+id/reset_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="40dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/reset"
+                    android:tint="@color/buttonColor"
+                    android:background="@color/buttonBackgroundColor"
+                />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="заново"
+                    android:textSize="13dp"
+                    android:gravity="center"
+                    android:textColor="@color/textColor"
+                />
+            </LinearLayout>
+
+            
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
